--- a/test/testPage.html
+++ b/test/testPage.html
@@ -4,6 +4,7 @@
     <title>Service Tester</title>
   </head>
   <body>
-    <script src="/operatic/operatic.js"></script>
+    <h1>Test Page</h1>
+    <script src="/operatic/client.js"></script>
   </body>
 </html>
