--- a/test/testPage.html
+++ b/test/testPage.html
@@ -6,5 +6,9 @@
   <body>
     <h1>Test Page</h1>
     <script src="/operatic/client.js"></script>
+    <script src="/operatic/chain.js"></script>
+    <script src="/operatic/util.js"></script>
+    <script src="/operatic/oi.js"></script>
+    <script src="/operatic/decorate.js"></script>
   </body>
 </html>
